[package]
name = "redent"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "Strip redundant indentation and indent the string. A faithful port of the redent npm package (strip-indent + indent-string)."
documentation = "https://docs.rs/redent"
repository = "https://github.com/trananhtung/redent"
homepage = "https://github.com/trananhtung/redent"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["indent", "dedent", "reindent", "strip", "string"]
categories = ["text-processing", "no-std"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]
strip-indent = "0.1"
indent-string = "0.1"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
